www/front_src/src/components/navigation/navigation.scss
/* ... */
.collapsed-level {
  &-items {
    &.first-level {
      .collapsed-level-item {
        background-color: $white-color;
        .collapsed-level-item-link {
          padding: 10px 10px 10px 34px;
        }
      }
    }
  }
}

/* ---------------------------------------------------
    MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
  .sidebar {
    min-width: 80px;
    max-width: 80px;
    text-align: center;
    margin-left: -80px;
  }
  .dropdown-toggle::after {
    top: auto;
    bottom: 10px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
  }
  .sidebar {
    &.active {
      margin-left: 0;
    }
    .sidebar-header h3, .CTAs {
      display: none;
    }
    .sidebar-header strong {
      display: block;
    }
    margin-left: 0;
  }
  .sidebarCollapse span {
    display: none;
  }
}
@media screen and(max-width: 1500px) {
  li.menu-item:last-child .collapsed-items li.collapsed-item:first-child > ul.collapsed-level-items {
    max-height: 350px;
    overflow-x: hidden;
    overflow-y: auto;
  }
}
.sidebar.active .menu-item:nth-child(4).active + .menu-item > ul.list-unstyled .collapsed-item:first-child:hover > ul {
  top: 0;
}

